--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
+<!--Name: Sanchita Kanade
+	Instructor Name: Zak Ruvalcaba
+	Class: CS648.01 Modern Web Development Frameworks Fall 2019
+	File: index.html
+    Assignment No.: 6 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Assignment 06</title>
-    <script src="js/01-larger-or-smaller.js"></script>
-    <!--<script src="js/02-coinflip.js"></script>-->
-    <!--<script src="js/03-coinflip-redux.js"></script>-->
-    <!--<script src="js/04-coinflip-streak.js"></script>-->
-    <!--<script src="js/05-triangle.js"></script>-->
-    <!--<script src="js/06-odd-or-even.js"></script>-->
-    <!--<script src="js/07-marco-polo.js"></script>-->
-    <!--<script src="js/08-countdown.js"></script>-->
+    <script src="js/01-larger-or-smaller.js"></script> 
+    <!--<script src="js/02-coinflip.js"></script> -->
+    <!--<script src="js/03-coinflip-redux.js"></script> -->
+   <!-- <script src="js/04-coinflip-streak.js"></script> -->
+   <!-- <script src="js/05-triangle.js"></script> -->
+   <!-- <script src="js/06-odd-or-even.js"></script> -->
+   <!-- <script src="js/07-marco-polo.js"></script> -->
+    <!--<script src="js/08-countdown.js"></script> -->
 </head>
 <body>
     
